--- a/new_todo/todoapp/templates/task_list.html
+++ b/new_todo/todoapp/templates/task_list.html
@@ -6,8 +6,9 @@
   <div class="todo-search">
     <form action="" method="POST">
      
-      <input type="text" placeholder="Enter Todo" /> 
-     
+      <!-- <input type="text" placeholder="Enter Todo" />  -->
+      {% csrf_token %}
+     {{form.title}}
       <button>Add</button>
     </form>
   </div>
@@ -26,7 +27,7 @@
 
       <div class="btn-container">
         <div class="edit">
-          <a href="">
+          <a href="{% url 'task-update' task.id %}">
             <i class="fa-solid fa-pen-to-square"></i>
           </a>
         </div>
