--- a/new_todo/todoapp/templates/task_list.html
+++ b/new_todo/todoapp/templates/task_list.html
@@ -32,7 +32,7 @@
           </a>
         </div>
         <div class="del">
-          <a href="">
+          <a href="{% url 'task-delete' task.id %}">
             <i class="fa-solid fa-trash-can"></i>
           </a>
         </div>
